<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuNovoProduto"
        android:title="@string/menu_add_text"
        android:icon="@drawable/ic_add_24"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menuPedidos"
        android:title="@string/menu_pedidos_text"
        android:icon="@drawable/ic_pedido_black_24"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menuConfiguracoes"
        android:title="@string/menu_config_text"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menuSair"
        android:title="@string/menu_sair_text"
        app:showAsAction="never"/>
</menu>